apps/overlays/dev-01/backend/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-service-mesh-gateway
  namespace: apps-backend-dev-01
spec:
  hosts:
    - "dev-01.skiyl9x.pp.ua"
  http:
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: api-service.apps-backend-dev-01.svc.cluster.local # The internal identity
            port:
              number: 80
